Remove warnings from google-java-format (#13)